# spatial-resolution

./: .gitignore  CMakeLists.txt  Makefile  README.md  command.txt
.VSCodeCounter/2025-02-25_13-05-57/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
DATA/: log_SOFIST3_DATA_HV20_chip1_alpha_241009.txt
data/: log_SOFIST3_DATA_HV130_chip1_alpha_241009.txt  log_SOFIST3_DATA_HV190_chip1_alpha_241009.txt  log_SOFIST3_DATA_HV50_chip1_alpha_241009.txt  log_SOFIST3_DATA_HV55V_chip1_alpha_240703.txt  log_SOFIST3_DATA_HV5_chip1_alpha_241009.txt  log_SOFIST3_DATA_HV85_chip1_alpha_241009.txt  log_SOFIST_alpha0226HV85.txt  log_SOFIST_alpha0226HV85_1.txt  log_SOFIST_gamma0226HV85.txt  log_SOFIST_gamma0226HV85_1.txt  log_SOFIST_nothing0226HV85.txt  log_SOFIST_nothing0226HV85_1.txt
include/: GUImain.hpp  LinkDef.hpp  MyClass.hpp  alias.hpp  analysis.hpp  analysis_class.hpp  block.hpp  mem_root.hpp  output.hpp  param.hpp
nisebuild/: myApp
src/: Find_AutoCluster.cpp  GUI_Dict.cpp  GUI_Dict.cxx  GUI_Dict_rdict.pcm  GUImain.cpp  GUImain.h  GUImain_class.cpp  MyClass.cpp  MyClass2.h  analysis.cpp  analysis_class.cpp  block.cpp  command.txt  header.h  mem_root.cpp  myApp  output.cpp  param.cpp  test02.cpp  test04.cpp  test05.cpp  test06.cpp  test07.cpp  test08.cpp  test09.cpp
test/: buttonChangelabel.cpp  buttonTest.cpp  buttonsLayout.cpp  main.cpp  simu  simu.cpp  test00.cpp  test01.cpp  test03.cpp  test05.cpp  test10.cpp  test11.cpp
